@startuml

class Paciente {
    - id: UUID
    - nomeCompleto: String
    - dataDeNascimento: LocalDate
    - contato: String
    - responsaveis: List<String>
    - cidade: String
    - rua: String
    - bairro: String
    - numeroCasa: Integer
    - transtornos: List<String>
    --
    + getAtendimentos(id: UUID): List<Atendimento>
    + getProfissionais(id: UUID): List<ProfissionalSaude>
}

class Atendimento {
    - id: UUID
    - relatorio: Map<String, Object>
    - dataAtendimento: LocalDateTime
    - status: boolean

    +getPacientes(id: UUID): Paciente
    +getProfissional(id: UUID): ProfissionalSaude
}

class ProfissionalSaude {
    - id: UUID
    - primeiroNome: String
    - nomeCompleto: String
    - email: String
    - contato: String
    - crm: String
    --
    + getPacientes(id: UUID)): List<Paciente>
    + getAtendimentos(id: UUID): List<ProfissionalSaude>
    + getArquivos(objectName: String): List<Arquivo>
}

class Arquivo {
    - objectName: String
    - presignedUrl: String
    - nomeArquivo: String
    - data: LocalDate
    - titulo: String
    - descricao: String

    + getTipo(id: Long): TipoArquivo
    + getProfissional(id: UUID): ProfissionalSaude
    + getPacientes((id: UUID): Paciente
}

class TipoArquivo {
    - id: Long
    - tipo: String

}

class Agendamento {
- id: UUID
- status: String
- dataHora: LocalDateTime
- numeracao: Long


+ getProfissional(id: UUID): ProfissionalSaude
+ getPacientes((id: UUID): Paciente
}

Paciente "1" -- "0..*" Atendimento
ProfissionalSaude "1" -- "0..*" Atendimento
Paciente "0..*" -- "0..*" ProfissionalSaude
TipoArquivo "0..*" -- "1" Arquivo
Paciente "1" -- "0..*" Arquivo
ProfissionalSaude "1" -- "0..*" Arquivo
Agendamento "0..*" -- "1" ProfissionalSaude
Agendamento "0..*" -- "1" Paciente

@enduml